<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.camunda.bpm.extension</groupId>
    <artifactId>camunda-cockpit-plugin-statistics-root</artifactId>
    <version>1.0.0</version>
    <name>Camunda Web App Statistics Plugin</name>
    <description>NovaTec`s fancy statistics plugin</description>

    <packaging>jar</packaging>

    <parent>
        <groupId>org.camunda</groupId>
        <artifactId>camunda-release-parent</artifactId>
        <version>2.2</version>
        <relativePath />
    </parent>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <camunda.version>7.1.0-Final</camunda.version>
        <!-- This property must be present for the pom.xml to be recognized as a plugin -->
        <camunda.plugin.category>Monitoring</camunda.plugin.category>
        <camunda.plugin.screenshot>screenshot-process-instances.png</camunda.plugin.screenshot>
        <camunda.plugin.screenshot.1>screenshot-user-tasks.png</camunda.plugin.screenshot.1>
        <camunda.plugin.screenshot.2>screenshot-timing.png</camunda.plugin.screenshot.2>
        <camunda.plugin.screenshot.3>screenshot-analytics.png</camunda.plugin.screenshot.3>
        <camunda.plugin.screenshot.4>screenshot-process-definition.png</camunda.plugin.screenshot.4>
        <camunda.plugin.testedOnVersion>7.1.0-Final</camunda.plugin.testedOnVersion>
        <camunda.plugin.language>EN</camunda.plugin.language>
    </properties>

    <dependencies>
	    <dependency>
	        <groupId>org.camunda.bpm.webapp</groupId>
	        <artifactId>camunda-webapp-core</artifactId>
	        <version>${camunda.version}</version>
	    </dependency>
	    <dependency>
	        <groupId>org.jboss.spec</groupId>
	        <artifactId>jboss-javaee-web-6.0</artifactId>
	        <version>3.0.2.Final</version>
	        <type>pom</type>
	        <scope>provided</scope>
	        <exclusions>
	            <exclusion>
	                <artifactId>xalan</artifactId>
	                <groupId>xalan</groupId>
	            </exclusion>
	        </exclusions>
	    </dependency>
	    <dependency>
	        <groupId>org.camunda.bpm</groupId>
	        <artifactId>camunda-engine</artifactId>
	        <version>${camunda.version}</version>
	        <scope>provided</scope>
	    </dependency>


	    <!-- provide the jars for RServe -->
	    <dependency>
	        <groupId>net.rforge</groupId>
	        <artifactId>Rserve</artifactId>
	        <version>0.6-8.1</version>
	    </dependency>
	    
	    <!-- Test dependencies--> 
	    <dependency>
	        <groupId>com.h2database</groupId>
	        <artifactId>h2</artifactId>
	        <version>1.3.171</version>
	        <scope>test</scope>
	    </dependency>
	
	    <dependency>
	        <groupId>mysql</groupId>
	        <artifactId>mysql-connector-java</artifactId>
	        <version>5.1.30</version>
	        <scope>test</scope>
	    </dependency>
	    
	    <dependency>
	        <groupId>junit</groupId>
	        <artifactId>junit</artifactId>
	        <version>4.11</version>
	        <scope>test</scope>
	    </dependency>
    </dependencies>
    
    <repositories>
        <repository>
            <id>camunda-bpm-nexus</id>
            <name>camunda-bpm-nexus</name>
            <url>https://app.camunda.com/nexus/content/groups/public</url>
        </repository>
    </repositories>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>


    <scm>
        <connection>scm:git:git@github.com:camunda/camunda-cockpit-plugin-statistics.git</connection>
        <url>scm:git:git@github.com:camunda/camunda-cockpit-plugin-statistics.git</url>
        <developerConnection>scm:git:git@github.com:camunda/camunda-cockpit-plugin-statistics.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <!-- repositories used for distribution of releases and snapshots, DO NOT CHANGE -->
    <distributionManagement>
        <repository>
            <id>camunda-nexus</id>
            <name>camunda bpm community extensions</name>
            <url>https://app.camunda.com/nexus/content/repositories/camunda-bpm-community-extensions</url>
        </repository>
        <snapshotRepository>
            <id>camunda-nexus</id>
            <name>camunda bpm community extensions snapshots</name>
            <url>https://app.camunda.com/nexus/content/repositories/camunda-bpm-community-extensions-snapshots</url>
            <!-- for maven 2 compatibility -->
            <uniqueVersion>true</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <defaultGoal>clean install</defaultGoal>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>


            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>attached</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>develop</id>
            <dependencies>
                <dependency>
                    <groupId>org.camunda.bpm.webapp</groupId>
                    <artifactId>camunda-webapp-tomcat-standalone</artifactId>
                    <version>${camunda.version}</version>
                    <type>war</type>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.mortbay.jetty</groupId>
                        <artifactId>jetty-maven-plugin</artifactId>
                        <version>8.1.14.v20131031</version>
                        <configuration>
                            <webAppConfig>
                                <contextPath>/camunda</contextPath>
                                <resourceBases>
                                    <resourceBase>${project.basedir}/src/main/resources</resourceBase>
                                    <resourceBAse>${project.basedir}/src/develop/resources</resourceBAse>
                                </resourceBases>
                            </webAppConfig>
                          <jvmArgs>-Xmx2048m -Xms1536m -XX:PermSize=256m -XX:MaxPermSize=384m</jvmArgs>
                        </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>1.9</version>
                    <executions>
                        <execution>
                            <id>add-source</id>
                            <phase>generate-sources</phase>
                            <goals>
                                <goal>add-source</goal>
                            </goals>
                            <configuration>
                                <sources>
                                   <source>src/develop/java</source>
                                </sources>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
          </plugins>
        </build>
      </profile>
    </profiles>
</project>
